kubernetes/permissions.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: matrix
