kubernetes/agent.yaml

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: agent
  labels:
    application: matrix
    program: agent
spec:
  replicas: 3
  serviceName: agent
  selector:
    matchLabels:
      program: agent
      application: matrix
  template:
    metadata:
      labels:
        program: agent
        application: matrix
    spec:
      containers:
        - name: agent-matrix
          image: "sbishyr/matrix-agent:0.1"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: agent-service
  labels:
    program: agent
    application: matrix
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    program: agent
    application: matrix
