kubernetes/architect_namespace.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: architect
  labels:
    program: architect
spec:
  replicas: 1
  template:
    metadata:
      labels:
        program: architect
        application: matrix
    spec:
      serviceAccountName: architect-sa
      containers:
        - name: architect
          image: sbishyr/matrix-architect:0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
  selector:
    matchLabels:
      program: architect
      application: matrix
---
apiVersion: v1
kind: Service
metadata:
  name: architect
  labels:
    program: architect
    application: matrix
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    program: architect
    application: matrix
