kubernetes/merovingian.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: merovingian
  labels:
    program: merovingian
spec:
  replicas: 1
  template:
    metadata:
      labels:
        program: merovingian
        application: matrix
    spec:
      serviceAccountName: architect-sa
      containers:
        - name: merovingian
          image: sbishyr/matrix-merovingian:0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
  selector:
    matchLabels:
      program: merovingian
      application: matrix
---
apiVersion: v1
kind: Service
metadata:
  name: merovingian
  labels:
    program: merovingian
    application: matrix
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    program: merovingian
    application: matrix
