kubernetes/oracle_configuration.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oracle
  labels:
    program: oracle
spec:
  replicas: 1
  template:
    metadata:
      labels:
        program: oracle
        application: matrix
    spec:
      containers:
        - name: oracle
          image: sbishyr/matrix-oracle:0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: oracle-config
              mountPath: /data/config
      volumes:
        - name: oracle-config
          configMap:
            name: oracle-cm
  selector:
    matchLabels:
      program: oracle
      application: matrix
---
apiVersion: v1
kind: Service
metadata:
  name: oracle
  labels:
    program: oracle
    application: matrix
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    program: oracle
    application: matrix
