kubernetes/twins.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: twins
  labels:
    program: twins
spec:
  replicas: 1
  template:
    metadata:
      labels:
        program: twins
        application: matrix
    spec:
      containers:
        - name: twins
          image: sbishyr/matrix-twins:0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
  selector:
    matchLabels:
      program: twins
      application: matrix
---
apiVersion: v1
kind: Service
metadata:
  name: twins
  labels:
    program: twins
    application: matrix
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    program: twins
    application: matrix
